# bilby-laplace

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
examples/: GW150914.py  gaussian_example.py
examples/outdir/: gaussian_fisher_result.json
src/bilby_laplace/: __init__.py  matrix.py  sampler.py
src/bilby_laplace.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
